--- a/Bai TH 21.4/index.html
+++ b/Bai TH 21.4/index.html
@@ -45,9 +45,9 @@
 
     <div class="menu">
       <ul>
-        <li><a href="#">Đồ họa</a></li>
-        <li><a href="#">Web</a></li>
-        <li><a href="#">Mạng</a></li>
+        <li><a href="#">Bài viết</a></li>
+        <li><a href="#">Nội dung bài viết</a></li>
+        <li><a href="#">Các trang khác</a></li>
       </ul>
     </div>
   </div>
@@ -68,28 +68,28 @@
   <!--3-->
   <div class="container">
     <div class="hamburger_btn-3">
-      <span>Đào tạo</span>
+      <span>Dịch vụ</span>
     </div>
 
     <div class="menu-3">
       <ul>
-        <li><a href="#">Đồ họa</a></li>
-        <li><a href="#">Web</a></li>
-        <li><a href="#">Mạng</a></li>
+        <li><a href="#">Dịch vụ 1</a></li>
+        <li><a href="#">Dịch vụ 2</a></li>
+        <li><a href="#">Dịch vụ 3</a></li>
       </ul>
     </div>
   </div>
   <!--4-->
   <div class="container">
     <div class="hamburger_btn-4">
-      <span>Đào tạo</span>
+      <span>Liên hệ</span>
     </div>
 
     <div class="menu-4">
       <ul>
-        <li><a href="#">Đồ họa</a></li>
-        <li><a href="#">Web</a></li>
-        <li><a href="#">Mạng</a></li>
+        <li><a href="#">Thông tin liên hệ</a></li>
+        <li><a href="#">Trang mạng xã hội</a></li>
+        <li><a href="#">Các thông tin khác</a></li>
       </ul>
     </div>
   </div>
